--- a/styles/table.css
+++ b/styles/table.css
@@ -6,20 +6,21 @@
     padding: 0;
 }
 
-h2{
+.table-title {
+    margin-left: 0;
     padding-bottom: 10px;
-    font-size: 20px;
+    font-size: 24px;
     font-weight: bold;
+    font-family: 'Poppins', sans-serif;
 }
 
-/* Set a base font size and family */
 body {
     font-family: 'Poppins', sans-serif;
     font-size: 13px;
     line-height: 1.6;
 }
 
-/* Container styles */
+/* Table container styles */
 .table-container {
     max-width: 100%;
     overflow-x: auto;
@@ -43,7 +44,7 @@ th {
     border-bottom: 1px solid #f0f0f0;
     padding: 11px;
     text-align: left;
-    font-size: 13.5px;
+    font-size: 14px;
 }
 
 /* Table body styles */
@@ -53,7 +54,7 @@ td {
 
 /* Adjust the table wrapper height to make room for pagination */
 .table-wrapper {
-    max-height: calc(100vh); /* Adjust as needed */
+    max-height: calc(100vh); 
     overflow-y: auto;
     position: relative; /* Needed for sticky positioning */
 }
@@ -67,7 +68,8 @@ td {
 }
 
 /* Pagination styles */
-#pagination {
+.pagination {
+    margin-left: 0;
     position: sticky;
     text-align: center;
     margin-left: auto;
@@ -78,18 +80,20 @@ td {
     margin-right: auto;
 }
 
-#pagination button,
+.pagination button,
 #pagination-options select {
     margin: 0 5px;
     padding: 5px 15px;
+    padding: 5px 15px;
     background-color: #ffffff;
     border: 1px solid #ccc;
+    border-radius: 0;
     cursor: pointer;
-    font-size: 13px; /* Adjust as needed */
+    font-size: 13px; 
     font-family: 'Poppins', sans-serif;
 }
 
-#pagination button:hover,
+.pagination button:hover,
 #pagination-options select:hover {
     background-color: #eeeeee;
 }
@@ -97,7 +101,7 @@ td {
 /* Set fixed column widths */
 th:nth-child(1),
 td:nth-child(1) {
-    min-width: 60px; /* Adjust as needed */
+    min-width: 80px; 
 }
 
 th:nth-child(2),
@@ -111,11 +115,29 @@ td:nth-child(5),
 th:nth-child(6),
 td:nth-child(6),
 th:nth-child(7),
-td:nth-child(7) {
-    min-width: 120px; /* Adjust as needed */
+td:nth-child(7),
+th:nth-child(8),
+td:nth-child(8),
+th:nth-child(9),
+td:nth-child(9),
+th:nth-child(10),
+td:nth-child(10),
+th:nth-child(11),
+td:nth-child(11),
+th:nth-child(12),
+td:nth-child(12),
+th:nth-child(13),
+td:nth-child(13),
+th:nth-child(14),
+td:nth-child(14),
+th:nth-child(15),
+td:nth-child(15),
+th:nth-child(16),
+td:nth-child(16) {
+    min-width: 120px;
 }
 
-/* Responsive layout */
+/* Responsive layout */ 
 @media (max-width: 768px) {
     th,
     td {
@@ -124,5 +146,3 @@ td:nth-child(7) {
         text-overflow: ellipsis;
     }
 }
-
-
