--- a/styles/user_form.css
+++ b/styles/user_form.css
@@ -1,109 +1,121 @@
-.container {
-    display: flex;
-    flex-wrap: wrap;
-    margin-left:2rem ;
-    margin-right: 2rem;
+#main {
+    margin: 2rem auto;
+    width: 54%;
 }
 
-.box {
-    flex: 1;
-    min-width: 200px;
-    margin: 10px;
-    background-color: #fff;
-    padding: 15px;
-}
-
-h2{
-    margin-left : 21px;
-    font-family : sans-serif;
-    font-size : 26px;
-}
-
-label {
-    font-family : sans-serif;
-    font-size : 15px;
-}
-
-input[type="text"],
-input[type="password"] {
-    width: 48%;
-    height : 40px;
-    margin-right : 1px;
-    margin-bottom: 20px;
-    border: 1px solid #aaa8a8;
-    border-radius: 5px;
-    font-size: 15px;
-    padding-left : 5px;
-}
-
-@media screen and (max-width:768px){
-    input[type="text"],
-    input[type="password"] {
-        width: 100%;
-    }    
-}
-
-select {
-   width : 99.5%;
-   height : 44px;
-   margin-bottom: 20px;
-   border: 1px solid #aaa8a8;
-   border-radius: 5px;
-   font-size: 15px;
-   padding-left : 5px;
-   color: #646363;
-}
-
-input[type="email"],
-input[type="tel"]   {
-    width : 98%;
-    height : 40px;
-    margin-bottom: 20px;
-    border: 1px solid #aaa8a8;
-    border-radius: 5px;
-    font-size: 15px;
-    padding-left : 5px;
-}
-
-button[type="submit"],
-button[type="reset"] {
-    width : 15%;
-    height : 38px;
-    background-color : #000;
-    color : #fff;
-    font-size: 14px;
-    padding : 10px 20px;
-    border : none;
-    border-radius: 5px;
-    cursor : pointer;
-    float : right;
-    margin-left : 10px;
-}
-
-@media screen and (max-width:768px){
-    button[type="submit"],
-    button[type="reset"] {
-        float: left;
-        width : 20%;
-        height : 38px;
-        margin-right : 5px;
+@media (max-width: 1400px) {
+    #main {
+        width: 60%;
     }
 }
 
-button[type="submit"]:hover,
-button[type="reset"]:hover {
-    background-color: #5A5A5A;
+@media (max-width: 1200px) {
+    #main {
+        width: 70%;
+    }
 }
 
-.required::after {
-    content: ' *';
-    color: red;
+@media (max-width: 992px) {
+    #main {
+        width: 80%;
+    }
 }
 
-[placeholder] {
-    color: #ccc;
+@media (max-width: 768px) {
+    #main {
+        width: 90%;
+    }
 }
 
-[placeholder]:focus {
-    color: #333;
+@media (max-width: 576px) {
+    #main {
+        width: 95%;
+    }
 }
+
+.box {
+    background-color: #ffffff;
+    border-radius: 8px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+    width: 100%;
+    text-align: left;
+    margin: 0 auto;
+}
+
+.heading {
+    font-size: 25px;
+    font-weight: bold;
+    margin-bottom: 0.7rem;
+    color: #1f2937; 
+}
+
+.subheading {
+    font-size: 18px; 
+    font-weight: 630;
+    margin-top: 0.9rem;
+    margin-bottom: 0.5rem;
+    color: #1f2937; 
+}
+
+.description {
+    font-size: 15px;
+    color: #6b7280; 
+    margin-bottom: 1rem;
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+}
+
+.form-group {
+    margin-bottom: 1.5rem;
+}
+
+.form-group label {
+    font-size: 15px;
+    font-weight: 600;
+    display: block;
+    color: #1f2937; 
+}
+
+.input {
+    width: 100%;
+    height: 47px;
+    padding: 10px;
+    border: 1px solid #d1d5db; 
+    border-radius: 9px;
+    box-sizing: border-box;
+    margin-top: 0.5rem;
+    background-color: #f9fafb; 
+    color: #1f2937; 
+    font-size: 0.875rem; 
+}
+
+.input-container {
+    display: flex;
+    gap: 10px;
+}
+
+.input-container .input {
+    flex: 1;
+}
+
+.submit-button {
+    background-color: #3b82f6; 
+    color: #ffffff;
+    padding: 10px 20px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    height: 40px;
+    border: none;
+    border-radius: 28px;
+    cursor: pointer;
+    font-size: 1rem;
+    font-weight: bold;
+}
+
+.submit-button:hover {
+    background-color: #2563eb; 
+} 
