--- a/styles/user_form.css
+++ b/styles/user_form.css
@@ -25,6 +25,9 @@
     #main {
         width: 90%;
     }
+    .input-container {
+        flex-direction: column;
+    }
 }
 
 @media (max-width: 576px) {
